Changed dialgo buttons text and colors

--- a/src/app/bmx/components/survey-dialog/survey-dialog.component.html
+++ b/src/app/bmx/components/survey-dialog/survey-dialog.component.html
@@ -2,7 +2,7 @@
     <div class="dialog">
         <h2>Confirmation</h2>
         <p>{{ dialogText }}</p>
-        <button (click)="confirm()">Confirmar</button>
-        <button (click)="cancel()">Cancelar</button>
+        <button class="confirm" (click)="confirm()">Confirm</button>
+        <button clase="cancel" (click)="cancel()">Cancel</button>
     </div>
 </div>
