--- a/src/app/bmx/components/survey-dialog/survey-dialog.component.scss
+++ b/src/app/bmx/components/survey-dialog/survey-dialog.component.scss
@@ -39,6 +39,11 @@ button {
 }
 
 button:hover {
+    background-color: #fff;
+    color: #000000;
+}
+
+.confirm{
     background-color: #324395;
     color: #fff;
 }
