Add dialog to other functions

--- a/src/app/bmx/components/bmx-creator/survey-creation-design/survey-creation-design.component.html
+++ b/src/app/bmx/components/bmx-creator/survey-creation-design/survey-creation-design.component.html
@@ -1,5 +1,5 @@
 <div *ngIf="showDialog">
-    <app-survey-dialog  (onConfirm)="deleteComponent(templateToDelete)" (onCancel)="closeDialog()" [dialogText]="dialogText"></app-survey-dialog>
+    <app-survey-dialog  (onConfirm)="confirmAction()" (onCancel)="closeDialog()" [dialogText]="dialogText"></app-survey-dialog>
 </div>
 
 
@@ -19,7 +19,7 @@
                 <div class="emoji-handle">.</div>
                 <div style="position: absolute;right: 0px;">
                     <button *ngIf="bmxClientPageOverview" matTooltip="double click to delete" matTooltipPosition="above"
-                        style="outline: none;color:#f10a0a;top: 60px;" mat-icon-button (dblclick)="openDialog(i)"
+                        style="outline: none;color:#f10a0a;top: 60px;" mat-icon-button (dblclick)="openDialog('delete',i)"
                         aria-label="delte">
                         <mat-icon style="font-size: 17px;">cancel</mat-icon>
                     </button>
@@ -34,7 +34,7 @@
             <div *ngIf="bmxItem.componentType === 'logo-header'" class="paragraph">
                 <div style="position: absolute;right: 0px;">
                     <button *ngIf="bmxClientPageOverview" matTooltip="double click to delete" matTooltipPosition="above"
-                        style="outline: none;color:#f10a0a;top: 19px;" mat-icon-button (dblclick)="openDialog(i)"
+                        style="outline: none;color:#f10a0a;top: 19px;" mat-icon-button (dblclick)="openDialog('delete', i)"
                         aria-label="delte">
                         <mat-icon style="font-size: 17px;">cancel</mat-icon>
                     </button>
@@ -52,7 +52,7 @@
                 <div class="emoji-handle">.</div>
                 <div style="position: absolute;right: 0px;">
                     <button *ngIf="bmxClientPageOverview" matTooltip="double click to delete" matTooltipPosition="above"
-                        style="outline: none;color:#f10a0a;top: 30px;" mat-icon-button (dblclick)="openDialog(i)"
+                        style="outline: none;color:#f10a0a;top: 30px;" mat-icon-button (dblclick)="openDialog('delete', i)"
                         aria-label="delte">
                         <mat-icon style="font-size: 17px;">cancel</mat-icon>
                     </button>
@@ -68,7 +68,7 @@
                 <div class="emoji-handle">.</div>
                 <div style="position: absolute;right: 0px;">
                     <button *ngIf="bmxClientPageOverview" matTooltip="double click to delete" matTooltipPosition="above"
-                        style="outline: none;color:#f10a0a;top: 7px;" mat-icon-button (dblclick)="openDialog(i)"
+                        style="outline: none;color:#f10a0a;top: 7px;" mat-icon-button (dblclick)="openDialog('delete', i)"
                         aria-label="delte">
                         <mat-icon style="font-size: 17px;">cancel</mat-icon>
                     </button>
@@ -85,7 +85,7 @@
                 <div class="emoji-handle">.</div>
                 <div style="position: absolute;right: 0px;">
                     <button *ngIf="bmxClientPageOverview" matTooltip="double click to delete" matTooltipPosition="above"
-                        style="outline: none;color:#f10a0a;top: 19px;" mat-icon-button (dblclick)="openDialog(i)"
+                        style="outline: none;color:#f10a0a;top: 19px;" mat-icon-button (dblclick)="openDialog('delete', i)"
                         aria-label="delte">
                         <mat-icon style="font-size: 17px;">cancel</mat-icon>
                     </button>
@@ -100,7 +100,7 @@
                 <div class="emoji-handle">.</div>
                 <div style="position: absolute;right: 0px;">
                     <button *ngIf="bmxClientPageOverview" matTooltip="double click to delete" matTooltipPosition="above"
-                        style="outline: none;color:#f10a0a;top: 19px;" mat-icon-button (dblclick)="openDialog(i)"
+                        style="outline: none;color:#f10a0a;top: 19px;" mat-icon-button (dblclick)="openDialog('delete', i)"
                         aria-label="delte">
                         <mat-icon style="font-size: 17px;">cancel</mat-icon>
                     </button>
@@ -116,7 +116,7 @@
                 <div class="emoji-handle">.</div>
                 <div style="position: absolute;right: 0px;">
                     <button *ngIf="bmxClientPageOverview" matTooltip="double click to delete" matTooltipPosition="above"
-                        style="outline: none;color:#f10a0a;top: 19px;" mat-icon-button (dblclick)="openDialog(i)"
+                        style="outline: none;color:#f10a0a;top: 19px;" mat-icon-button (dblclick)="openDialog('delete', i)"
                         aria-label="delte">
                         <mat-icon style="font-size: 17px;">cancel</mat-icon>
                     </button>
@@ -131,7 +131,7 @@
                 <div class="emoji-handle">.</div>
                 <div style="position: absolute;right: 0px;">
                     <button *ngIf="bmxClientPageOverview" matTooltip="double click to delete" matTooltipPosition="above"
-                        style="outline: none;color:#f10a0a;top: 19px;" mat-icon-button (dblclick)="openDialog(i)"
+                        style="outline: none;color:#f10a0a;top: 19px;" mat-icon-button (dblclick)="openDialog('delete', i)"
                         aria-label="delte">
                         <mat-icon style="font-size: 17px;">cancel</mat-icon>
                     </button>
@@ -147,7 +147,7 @@
                 <div class="emoji-handle">.</div>
                 <div style="position: absolute;right: 0px;">
                     <button *ngIf="bmxClientPageOverview" matTooltip="double click to delete" matTooltipPosition="above"
-                        style="outline: none;color:#f10a0a;top: 19px;" mat-icon-button (dblclick)="openDialog(i)"
+                        style="outline: none;color:#f10a0a;top: 19px;" mat-icon-button (dblclick)="openDialog('delete', i)"
                         aria-label="delte">
                         <mat-icon style="font-size: 17px;">cancel</mat-icon>
                     </button>
@@ -164,7 +164,7 @@
                 <div class="emoji-handle">.</div>
                 <div style="position: absolute;right: 0px;">
                     <button *ngIf="bmxClientPageOverview" matTooltip="double click to delete" matTooltipPosition="above"
-                        style="outline: none;color:#f10a0a;top: 19px;" mat-icon-button (dblclick)="openDialog(i)"
+                        style="outline: none;color:#f10a0a;top: 19px;" mat-icon-button (dblclick)="openDialog('delete', i)"
                         aria-label="delte">
                         <mat-icon style="font-size: 17px;">cancel</mat-icon>
                     </button>
@@ -290,7 +290,7 @@
                 </mat-icon>
             </button>
             <br>
-            <button *ngIf="true" (click)="saveData()" mat-icon-button matTooltip="save brandmatrix"
+            <button *ngIf="true" (click)="openDialog('save')" mat-icon-button matTooltip="save brandmatrix"
                 matTooltipPosition="right">
                 <mat-icon class="full-icon">cloud_upload
                 </mat-icon>
