--- a/src/app/bmx/components/bmx-creator/survey-creation-design/templates/image-rate-scale/image-rate-scale.component.html
+++ b/src/app/bmx/components/bmx-creator/survey-creation-design/templates/image-rate-scale/image-rate-scale.component.html
@@ -1,3 +1,6 @@
+<div *ngIf="showDialog"><app-survey-dialog (onConfirm)="confirmAction()" (onCancel)="closeDialog()"
+    [dialogText]="dialogText"></app-survey-dialog>
+</div>
 <div *ngIf="showCreationModalVideo && bmxClientPageOverview" id="myModal" class="modal-video"
     style="display: flex;flex-direction: column;gap: 2px;">
     <!-- <label class="container-checkbox">Don't show again
@@ -103,7 +106,7 @@
             <mat-icon style="font-size: 26px;" class="full-icon">{{iconMenuShow}}</mat-icon>
         </button>
         <div *ngIf="showMatrixMenu">
-            <button (click)="undo(); editSingleTableCells = false" class="add-column" matTooltip="undo last change"
+            <button (click)="openDialog('undo'); editSingleTableCells = false" class="add-column" matTooltip="undo last change"
                 matTooltipPosition="above" mat-icon-button aria-label="ranking">
                 <mat-icon style="font-size: 26px;" class="full-icon">undo</mat-icon>
             </button>
@@ -457,7 +460,7 @@
 
                             <span *ngIf="selectedColumn === e && bmxClientPageOverview" class="header-delete-icon"
                                 matTooltip="double click to delete column" matTooltipPosition="above"
-                                (dblclick)="deleteColumn(columnName)">x</span>
+                                (dblclick)="openDialog('delete column', columnName)">x</span>
 
                             <textarea *ngIf="editSingleTableCells"
                                 [style.font-size]="bmxItem.componentSettings[0].fontSize +'px'"
