--- a/src/app/bmx/components/bmx-creator/survey-creation-design/templates/question-answer/question-answer.component.html
+++ b/src/app/bmx/components/bmx-creator/survey-creation-design/templates/question-answer/question-answer.component.html
@@ -1,3 +1,6 @@
+<div *ngIf="showDialog"><app-survey-dialog (onConfirm)="confirmAction()" (onCancel)="closeDialog()"
+    [dialogText]="dialogText"></app-survey-dialog>
+</div>
 <div *ngIf="showCreationModalVideo && bmxClientPageOverview" id="myModal" class="modal-video"
     style="display: flex;flex-direction: column;gap: 2px;">
     <!-- <label class="container-checkbox">Don't show again
@@ -103,7 +106,7 @@
             <mat-icon style="font-size: 26px;" class="full-icon">{{iconMenuShow}}</mat-icon>
         </button>
         <div *ngIf="showMatrixMenu">
-            <button (click)="undo();editSingleTableCells = false" class="add-column" matTooltip="undo last change"
+            <button (click)="openDialog('undo');editSingleTableCells = false" class="add-column" matTooltip="undo last change"
                 matTooltipPosition="above" mat-icon-button aria-label="ranking">
                 <mat-icon style="font-size: 26px;" class="full-icon">undo</mat-icon>
             </button>
@@ -301,7 +304,7 @@
                         <!-- IF YOU WANT TO DELET ALL COLUMNS PASS THE COLUMN NAME  NOT testName[columnName]-->
                         <span *ngIf="selectedColumn === e && bmxClientPageOverview" class="header-delete-icon"
                             matTooltip="double click to delete column" matTooltipPosition="above"
-                            (dblclick)="deleteColumn(columnName)">x</span>
+                            (dblclick)="openDialog('delete column', columnName)">x</span>
 
                         <!-- 🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢 HEADER TEXT AREA 🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢 -->
 
