--- a/src/app/bmx/components/bmx-creator/survey-creation-design/templates/rating-scale/rating-scale.component.html
+++ b/src/app/bmx/components/bmx-creator/survey-creation-design/templates/rating-scale/rating-scale.component.html
@@ -1,3 +1,7 @@
+<div *ngIf="showDialog"><app-survey-dialog (onConfirm)="confirmAction()" (onCancel)="closeDialog()"
+    [dialogText]="dialogText"></app-survey-dialog>
+</div>
+
 <div *ngIf="showCreationModalVideo && bmxClientPageOverview" id="myModal" class="modal-video"
     style="display: flex;flex-direction: column;gap: 2px;">
     <!-- <label class="container-checkbox">Don't show again
@@ -90,7 +94,7 @@ gap: 0px;position: absolute;left: -713px;z-index: 1;border: 2px dashed #324395;"
             <mat-icon class="full-icon">{{iconMenuShow}}</mat-icon>
         </button>
         <div *ngIf="showMatrixMenu">
-            <button (click)="undo(); editSingleTableCells = false" class="add-column" matTooltip="undo last change"
+            <button (click)="openDialog('undo'); editSingleTableCells = false" class="add-column" matTooltip="undo last change"
                 matTooltipPosition="above" mat-icon-button aria-label="ranking">
                 <mat-icon style="font-size: 26px;" class="full-icon">undo</mat-icon>
             </button>
@@ -367,7 +371,7 @@ gap: 0px;position: absolute;left: -713px;z-index: 1;border: 2px dashed #324395;"
                         position: absolute;top: 35px;background: white;border: #324395 dashed 1px;"
                                 (mouseleave)="selectedColumn = ''">
                                 <span class="header-delete-icon" matTooltip="double click to delete column"
-                                    matTooltipPosition="above" (dblclick)="deleteColumn(columnName)">x</span>
+                                    matTooltipPosition="above" (dblclick)="openDialog('delete column', columnName)">x</span>
                                 <mat-icon style="cursor: pointer;" (click)="swapColumns(e)">chevron_right</mat-icon>
                                 <mat-icon style="cursor: pointer;"
                                     (click)="columnFontSizeAdjust(columnName, 'decrease')">remove</mat-icon>
@@ -492,7 +496,7 @@ gap: 0px;position: absolute;left: -713px;z-index: 1;border: 2px dashed #324395;"
                         (mouseenter)="selectedColumn = e" (mouseleave)="selectedColumn = ''">
                         <span *ngIf="selectedColumn === e && bmxClientPageOverview" class="header-delete-icon"
                             matTooltip="double click to delete column" matTooltipPosition="above"
-                            (dblclick)="deleteColumn(columnName)">x</span>
+                            (dblclick)="openDialog('delete column', columnName)">x</span>
 
 
                         <textarea *ngIf="editSingleTableCells"
