--- a/src/app/bmx/components/bmx-creator/survey-creation-design/templates/text-paragraph/text-paragraph.component.html
+++ b/src/app/bmx/components/bmx-creator/survey-creation-design/templates/text-paragraph/text-paragraph.component.html
@@ -1,6 +1,6 @@
 
-<button *ngIf="openSettings && bmxClientPageOverview" class="cancel" (click)=" replaceBiI_Markers(); openSettings = !openSettings"
-    mat-icon-button>
+<button *ngIf="openSettings && bmxClientPageOverview" class="cancel"
+    (click)=" replaceBiI_Markers(); openSettings = !openSettings" mat-icon-button>
     <mat-icon class="full-icon" style="font-size: 25px;">check_circle</mat-icon>
 </button>
 <button *ngIf="!openSettings && bmxClientPageOverview" mat-icon-button class="edit-icon"
@@ -8,14 +8,18 @@
     <mat-icon class="full-icon" style="font-size: 25px;">edit</mat-icon>
 </button>
 
-<div class="paragram-desktop" *ngIf="currentPage == 1 && template== 'tinder' ; else regularTemplate" style="margin: 30px;font-size: 20px;" [innerHTML]="bmxItem.componentText | safe: 'html'"></div>
-<ng-template #regularTemplate><div class="paragram-mobile" style="margin: 30px;font-size: 20px;" [innerHTML]="bmxItem.componentText | safe: 'html'"></div></ng-template>
+<div class="paragram-desktop" *ngIf="currentPage == 1 && template== 'tinder' ; else regularTemplate"
+    style="margin: 30px;font-size: 20px;" [innerHTML]="bmxItem.componentText | safe: 'html'"></div>
+<ng-template #regularTemplate>
+    <div class="paragram-mobile" style="margin: 30px;font-size: 20px;"
+        [innerHTML]="bmxItem.componentText | safe: 'html'"></div>
+</ng-template>
 
 <div cdkDrag>
     <ckeditor *ngIf="openSettings && bmxClientPageOverview" id="txtTexto" class="ckeditorcev"
         style="animation: fadeIn 0.5s ease forwards;" [ngModelOptions]="{standalone: true}"
         [(ngModel)]="bmxItem.componentText" [data]="bmxItem.componentText" [config]="ckconfig">
-    </ckeditor>    
+    </ckeditor>
 </div>
 
 
