--- a/src/app/bmx/components/bmx-creator/survey-creation-design/survey-creation-design.component.html
+++ b/src/app/bmx/components/bmx-creator/survey-creation-design/survey-creation-design.component.html
@@ -356,27 +356,22 @@
             </mat-option>
         </mat-select>
     </mat-form-field>
-    <div *ngIf="templateName.length > 3"
-        style="display: flex;flex-direction: row;justify-content: space-evenly; width: 300px;">
-        <button *ngIf="isSaveOrUpdate" (click)="loadTemplate(templateName)" mat-raised-button
-            style="color: white;background-color: #8a2a5a ">
+    <div *ngIf="templateName.length > 3"style="display: flex;flex-direction: row;justify-content: space-evenly; width: 300px;">
+        <button *ngIf="isSaveOrUpdate" (click)="loadTemplate(templateName)" mat-raised-button style="color: white;background-color: #8a2a5a ">
             load
         </button>
 
         <p *ngIf="isSaveOrUpdate">or</p>
-        <button *ngIf="isSaveOrUpdate" (click)="saveOrUpdateTemplate(templateName)" mat-raised-button
-            style="color: white;background-color: #2a3f8a">
+        <button *ngIf="isSaveOrUpdate" (click)="saveOrUpdateTemplate(templateName)" mat-raised-button style="color: white;background-color: #2a3f8a">
             update
         </button>
 
         <p *ngIf="isSaveOrUpdate">or</p>
-        <button *ngIf="isSaveOrUpdate" (dblclick)="deleteTemplate(templateName)"
-            matTooltip="double click to delete template" matTooltipPosition="below" mat-raised-button
+        <button *ngIf="isSaveOrUpdate" (dblclick)="deleteTemplate(templateName)" matTooltip="double click to delete template" matTooltipPosition="below" mat-raised-button
             style="color: white;background-color: #972044">
             delete
         </button>
     </div>
-    <mat-icon (click)="isTemplateUpdate = false" style="cursor: pointer;" class="full-icon">close
-    </mat-icon>
+    <mat-icon (click)="isTemplateUpdate = false" style="cursor: pointer;" class="full-icon">close</mat-icon>
     
 </div>
