--- a/src/app/bmx/components/bmx-creator/survey-creation-design/templates/rating-scale/rating-scale.component.html
+++ b/src/app/bmx/components/bmx-creator/survey-creation-design/templates/rating-scale/rating-scale.component.html
@@ -5,90 +5,86 @@
 <div *ngIf="showCreationModalVideo && bmxClientPageOverview" id="myModal" class="modal-video"
     style="display: flex;flex-direction: column;gap: 2px;">
     <!-- <label class="container-checkbox">Don't show again
-    <input (click)="saveSelection()" type="checkbox" value="Bike" #modalChecked>
-    <span class="checkmark">&#x2714;</span>
-</label> -->
+        <input (click)="saveSelection()" type="checkbox" value="Bike" #modalChecked>
+        <span class="checkmark">&#x2714;</span>
+    </label> -->
     <div class="modal-content">
         <video src='{{CREATION_VIDEO_PATH}}' controls></video>
     </div>
     <button class="btn btn-raised close-modal" (click)="showCreationModalVideo=false">close</button>
 </div>
 <!-- ➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗  SETTINGS ICONS  ➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗ -->
-<div style="display: flex;
-flex-direction: row-reverse;
-justify-content: end;
-top: -30px;
-right: 50px;border: 2px dashed #324395;padding-right: 10px;background: #ffffffd9;
-position: absolute;height: 54px;align-items: center;padding-right: 38px;">
-    <!-- ⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺RAGE INPUTS FOR COLUMN SETTINGS ⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺ -->
-    <div *ngIf="isColumnResizerOn && bmxClientPageOverview" class="" style="    display: flex;
-flex-direction: row;
-justify-content: start;background: #ffffffd9;
-gap: 0px;position: absolute;left: -713px;z-index: 1;border: 2px dashed #324395;">
-        <!-- NAME CANDIATES -->
-        <div style="display: flex;flex-direction: column;align-items: center;">
-            <p style="margin: 0 0 -12px;color: #324395;">candidates
-            </p>
-            <input type="range" style="margin: 20px;width: 50px;"
-                [(ngModel)]="bmxItem.componentSettings[0].nameCandidatesWidth" class="slider-font-size"
-                tickInterval="0.5" min="50" max="400" [value]="bmxItem.componentSettings[0].nameCandidatesWidth">
+    <div *ngIf="bmxClientPageOverview" style="display: flex; flex-direction: row-reverse;justify-content: end;top: -30px;right: 50px;border: 2px dashed #324395;padding-right: 10px;background: #ffffffd9;
+        position: absolute;height: 54px;align-items: center;padding-right: 38px;">
+        <!-- ⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺RAGE INPUTS FOR COLUMN SETTINGS ⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺ -->
+        <div  class="" style="display: flex;
+            flex-direction: row;
+            justify-content: start;background: #ffffffd9;
+            gap: 0px;position: absolute;left: -713px;z-index: 1;border: 2px dashed #324395;">
+            <!-- NAME CANDIATES -->
+            <div style="display: flex;flex-direction: column;align-items: center;">
+                <p style="margin: 0 0 -12px;color: #324395;">candidates
+                </p>
+                <input type="range" style="margin: 20px;width: 50px;"
+                    [(ngModel)]="bmxItem.componentSettings[0].nameCandidatesWidth" class="slider-font-size"
+                    tickInterval="0.5" min="50" max="400" [value]="bmxItem.componentSettings[0].nameCandidatesWidth">
+            </div>
+            <!-- RATIONALE -->
+            <div style="display: flex;flex-direction: column;align-items: center;">
+                <p style="margin: 0 0 -12px;color: #324395;">rationale
+                </p>
+                <input type="range" style="margin: 20px;width: 50px;"
+                    [(ngModel)]="bmxItem.componentSettings[0].rationalewidth" class="slider-font-size" tickInterval="0.5"
+                    min="50" max="600" [value]="bmxItem.componentSettings[0].rationalewidth">
+            </div>
+            <!-- RATE -->
+            <div style="display: flex;flex-direction: column;align-items: center;">
+                <p style="margin: 0 0 -12px;color: #324395;">rate
+                </p>
+                <input type="range" style="margin: 20px;width: 50px;" [(ngModel)]="bmxItem.componentSettings[0].rateWidth"
+                    class="slider-font-size" tickInterval="0.5" min="50" max="400"
+                    [value]="bmxItem.componentSettings[0].rateWidth">
+            </div>
+            <!-- COMMENTS -->
+            <div style="display: flex;flex-direction: column;align-items: center;">
+                <p style="margin: 0 0 -12px;color: #324395;">comments
+                </p>
+                <input type="range" style="margin: 20px;width: 50px;"
+                    [(ngModel)]="bmxItem.componentSettings[0].commentsWidth" class="slider-font-size" tickInterval="0.5"
+                    min="50" max="400" [value]="bmxItem.componentSettings[0].commentsWidth">
+            </div>
+            <!-- REST OF THE COLUMNS -->
+            <div style="display: flex;flex-direction: column;align-items: center;">
+                <p style="margin: 0 0 -12px;color: #324395;">other columns
+                </p>
+                <input type="range" style="margin: 20px;width: 50px;" [(ngModel)]="bmxItem.componentSettings[0].columnWidth"
+                    class="slider-font-size" tickInterval="0.5" min="50" max="400"
+                    [value]="bmxItem.componentSettings[0].columnWidth">
+            </div>
+            <!-- ROW HEIGHT -->
+            <div style="display: flex;flex-direction: column;align-items: center;">
+                <p style="margin: 0 0 -12px;color: #324395;">row height</p>
+                <input type="range" style="margin: 20px;width: 60px;" [(ngModel)]="bmxItem.componentSettings[0].rowHeight"
+                    class="slider-font-size" tickInterval="0.5" min="-10" max="20"
+                    [value]="bmxItem.componentSettings[0].rowHeight">
+            </div>
+            <!-- FONT -->
+            <div style="display: flex;flex-direction: column;align-items: center;">
+                <p style="margin: 0 0 -12px;color: #324395;">font size: {{bmxItem.componentSettings[0].fontSize}}</p>
+                <input type="range" style="margin: 20px;width: 50px;" [(ngModel)]="bmxItem.componentSettings[0].fontSize"
+                    class="slider-font-size" tickInterval="0.1" min="2" max="40"
+                    [value]="bmxItem.componentSettings[0].fontSize">
+            </div>
+            <!-- RADIO -->
+            <div *ngIf="radioColumnCounter > 1" style="display: flex;flex-direction: column;align-items: center;">
+                <p style="margin: 0 0 -12px;color: #324395;">radio</p>
+                <input type="range" style="margin: 20px;width: 50px;"
+                    [(ngModel)]="bmxItem.componentSettings[0].radioColumnsWidth" class="slider-font-size" tickInterval="0.5"
+                    min="50" max="100" [value]="bmxItem.componentSettings[0].radioColumnsWidth">
+            </div>
         </div>
-        <!-- RATIONALE -->
-        <div style="display: flex;flex-direction: column;align-items: center;">
-            <p style="margin: 0 0 -12px;color: #324395;">rationale
-            </p>
-            <input type="range" style="margin: 20px;width: 50px;"
-                [(ngModel)]="bmxItem.componentSettings[0].rationalewidth" class="slider-font-size" tickInterval="0.5"
-                min="50" max="600" [value]="bmxItem.componentSettings[0].rationalewidth">
-        </div>
-        <!-- RATE -->
-        <div style="display: flex;flex-direction: column;align-items: center;">
-            <p style="margin: 0 0 -12px;color: #324395;">rate
-            </p>
-            <input type="range" style="margin: 20px;width: 50px;" [(ngModel)]="bmxItem.componentSettings[0].rateWidth"
-                class="slider-font-size" tickInterval="0.5" min="50" max="400"
-                [value]="bmxItem.componentSettings[0].rateWidth">
-        </div>
-        <!-- COMMENTS -->
-        <div style="display: flex;flex-direction: column;align-items: center;">
-            <p style="margin: 0 0 -12px;color: #324395;">comments
-            </p>
-            <input type="range" style="margin: 20px;width: 50px;"
-                [(ngModel)]="bmxItem.componentSettings[0].commentsWidth" class="slider-font-size" tickInterval="0.5"
-                min="50" max="400" [value]="bmxItem.componentSettings[0].commentsWidth">
-        </div>
-        <!-- REST OF THE COLUMNS -->
-        <div style="display: flex;flex-direction: column;align-items: center;">
-            <p style="margin: 0 0 -12px;color: #324395;">other columns
-            </p>
-            <input type="range" style="margin: 20px;width: 50px;" [(ngModel)]="bmxItem.componentSettings[0].columnWidth"
-                class="slider-font-size" tickInterval="0.5" min="50" max="400"
-                [value]="bmxItem.componentSettings[0].columnWidth">
-        </div>
-        <!-- ROW HEIGHT -->
-        <div style="display: flex;flex-direction: column;align-items: center;">
-            <p style="margin: 0 0 -12px;color: #324395;">row height</p>
-            <input type="range" style="margin: 20px;width: 60px;" [(ngModel)]="bmxItem.componentSettings[0].rowHeight"
-                class="slider-font-size" tickInterval="0.5" min="-10" max="20"
-                [value]="bmxItem.componentSettings[0].rowHeight">
-        </div>
-        <!-- FONT -->
-        <div style="display: flex;flex-direction: column;align-items: center;">
-            <p style="margin: 0 0 -12px;color: #324395;">font size: {{bmxItem.componentSettings[0].fontSize}}</p>
-            <input type="range" style="margin: 20px;width: 50px;" [(ngModel)]="bmxItem.componentSettings[0].fontSize"
-                class="slider-font-size" tickInterval="0.1" min="2" max="40"
-                [value]="bmxItem.componentSettings[0].fontSize">
-        </div>
-        <!-- RADIO -->
-        <div *ngIf="radioColumnCounter > 1" style="display: flex;flex-direction: column;align-items: center;">
-            <p style="margin: 0 0 -12px;color: #324395;">radio</p>
-            <input type="range" style="margin: 20px;width: 50px;"
-                [(ngModel)]="bmxItem.componentSettings[0].radioColumnsWidth" class="slider-font-size" tickInterval="0.5"
-                min="50" max="100" [value]="bmxItem.componentSettings[0].radioColumnsWidth">
-        </div>
-    </div>
-    <!-- <mat-slider min="200" max="500" step="10" value="200" [(value)]="bmxItem.componentSettings[0].columnWidth"></mat-slider><p>{{bmxItem.componentSettings[0].columnWidth}}</p> -->
-    <!-- ⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺  END  ⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺ -->
+        <!-- <mat-slider min="200" max="500" step="10" value="200" [(value)]="bmxItem.componentSettings[0].columnWidth"></mat-slider><p>{{bmxItem.componentSettings[0].columnWidth}}</p> -->
+        <!-- ⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺  END  ⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺⏺ -->
     <div style="display: flex; flex-direction: row-reverse;">
         <button (click)="showMatrixMenuBmx()" mat-icon-button matTooltip="open menu" matTooltipPosition="right">
             <mat-icon class="full-icon">{{iconMenuShow}}</mat-icon>
