--- a/src/app/bmx/components/bmx-creator/survey-matrix/survey-matrix.component.html
+++ b/src/app/bmx/components/bmx-creator/survey-matrix/survey-matrix.component.html
@@ -5,8 +5,7 @@
         <div class="desktop">
             <button *ngIf="true" (click)="seeTutorial()" class="see-tutorial" mat-icon-button matTooltip="See tutorial"
                 matTooltipPosition="above" style="position: absolute;color: grey;z-index: 9999999999;outline: none;">
-                <mat-icon class="full-icon" style="font-size: 36px;">contact_support
-                </mat-icon>
+                <mat-icon class="full-icon" style="font-size: 36px;">contact_support</mat-icon>
             </button>
             <!-- <button (click)="displayQrCode()" mat-icon-button matTooltip="design tools" matTooltipPosition="above"
             *ngIf="true"
@@ -33,8 +32,7 @@
 
 
                 <!-- BRAND MATRIX MODULAR TEMPLATE COMPONENTS  🧑🏻‍🚀🧑🏻‍🚀🧑🏻‍🚀🧑🏻‍🚀🧑🏻‍🚀🧑🏻‍🚀🧑🏻‍🚀🧑🏻‍🚀🧑🏻‍🚀🧑🏻‍🚀🧑🏻‍🚀🧑🏻‍🚀🧑🏻‍🚀 -->
-                <div *ngFor="let bmxItem of bmxPagesClient[currentPage]?.page; let i = index"
-                    style="display: flex;flex-direction: column;align-content: center;">
+                <div *ngFor="let bmxItem of bmxPagesClient[currentPage]?.page; let i = index" style="display: flex;flex-direction: column;align-content: center;">
 
                     <div *ngIf="bmxItem.componentType === 'page-title'" class="paragraph">
                         <div class="emoji-handle">.</div>
@@ -100,8 +98,8 @@
                         <app-rating-scale [bmxItem]="bmxItem" [i]="i"
                             [bmxClientPageDesignMode]="bmxClientPageDesignMode"
                             [bmxClientPageOverview]="bmxClientPageOverview" (launchPathModal)="setPath($event)"
-                            (autoSave)="autoSave()"></app-rating-scale>
-
+                            (autoSave)="autoSave()">
+                        </app-rating-scale>
                     </div>
                     <!-- END STARS SCALE 👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽👽 -->
 
