--- a/src/app/bmx/components/project-information/project-information.component.scss
+++ b/src/app/bmx/components/project-information/project-information.component.scss
@@ -77,3 +77,14 @@ table {
 .example-list.cdk-drop-list-dragging .example-box:not(.cdk-drag-placeholder) {
   transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
 }
+
+@media screen and (max-width: 920px){
+  .row-field {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    margin-left: 96px;
+    align-items: baseline;
+}
+
+}
